--- a/equilizer/templates/equilizer/checkout_list.html
+++ b/equilizer/templates/equilizer/checkout_list.html
@@ -1,10 +1,5 @@
-<!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>Equilizer</title>
-	</head>
-	<body>
+{% extends 'equilizer/base.html' %***REMOVED***
+{% block content %***REMOVED***
 		<h1>Checkout History</h1>
 		<ul>
 			{% for checkout in object_list %***REMOVED***
@@ -14,5 +9,4 @@
 			</li>
 			{% endfor %***REMOVED***
 		</ul>
-	</body>
-</html>
+{% endblock %***REMOVED***
