--- a/equilizer/templates/equilizer/base.html
+++ b/equilizer/templates/equilizer/base.html
@@ -23,7 +23,7 @@
 					<a class="navbar-item" >
 						<form id="logout" name="logout" action="{% url 'logout' %***REMOVED***" method="post">
 							{% csrf_token %***REMOVED***
-							<input type="submit" value="Logout">
+							<input class="button" type="submit" value="Logout">
 						</form>
 					</a>
 				{% else %***REMOVED***
