--- a/equilizer/templates/equilizer/itemgroup_list.html
+++ b/equilizer/templates/equilizer/itemgroup_list.html
@@ -24,7 +24,7 @@
 					</div>
 					<div class="level is-mobile">
 						<div class="level-left">
-														{% if item.avail_inventory > 0 %***REMOVED***
+							{% if itemgroup.avail_inventory > 0 %***REMOVED***
 							<form 
 								name="quick_add_{{itemgroup.id***REMOVED******REMOVED***"
 								action="{% url 'cart-add' itemgroup.id %***REMOVED***"
