--- a/equilizer/templates/equilizer/itemgroup_detail.html
+++ b/equilizer/templates/equilizer/itemgroup_detail.html
@@ -35,7 +35,7 @@
 
 					<div class="is-size-7 has-text-danger level-item">
 						This item is currently unavailable.<br/>
-						You can waitlist this item and we will hold it for you until it is next available.
+						You can waitlist this item and we will hold it for you when it is next available.
 					</div>
 				</div>
 			</div>
