--- a/equilizer/templates/equilizer/home.html
+++ b/equilizer/templates/equilizer/home.html
@@ -1,5 +1,13 @@
 {% extends 'equilizer/base.html' %***REMOVED***
 
 {% block content %***REMOVED***
-Hello!
+<div class="content">
+	<h1>Announcements</h1>
+	<p>No announcements</p>
+</div>
+<div class="content">
+	<h1>Events</h1>
+	<p>No upcoming events</p>
+</div>
+
 {% endblock %***REMOVED***
