fix bug where there would be spaces in the text area?

--- a/equilizer/templates/equilizer/deny_checkout.html
+++ b/equilizer/templates/equilizer/deny_checkout.html
@@ -10,8 +10,8 @@
 				id="reason"
 				name="reason"
 				maxlength="500"
-				class="textarea {% if form.reason.errors %***REMOVED***is-danger{% endif %***REMOVED***">
-			</textarea>
+				class="textarea {% if form.reason.errors %***REMOVED***is-danger{% endif %***REMOVED***"
+				></textarea>
 			{% if form.reason.errors %***REMOVED***
 				{% for e in form.reason.errors %***REMOVED***
 					<p class="help is-danger">{{e***REMOVED******REMOVED***</p>
