--- a/bibliotech/templates/bibliotech/checkout_list.html
+++ b/bibliotech/templates/bibliotech/checkout_list.html
@@ -1,4 +1,5 @@
-{% extends 'equilizer/base.html' %***REMOVED***
+{% extends 'bibliotech/base.html' %***REMOVED***
+
 {% block content %***REMOVED***
 		<h1 class="title">Checkout History</h1>
 		<table class="table is-fullwidth">
