--- a/bibliotech/templates/bibliotech/home.html
+++ b/bibliotech/templates/bibliotech/home.html
@@ -1,4 +1,4 @@
-{% extends 'equilizer/base.html' %***REMOVED***
+{% extends 'bibliotech/base.html' %***REMOVED***
 
 {% block content %***REMOVED***
 <div class="content">
