--- a/bibliotech/templates/bibliotech/login.html
+++ b/bibliotech/templates/bibliotech/login.html
@@ -1,4 +1,4 @@
-{% extends 'equilizer/base.html' %***REMOVED***
+{% extends 'bibliotech/base.html' %***REMOVED***
 
 {% block content %***REMOVED***
 <div class="box container is-max-desktop is-fluid mt-6">
