--- a/bibliotech/templates/bibliotech/checkout_list.html
+++ b/bibliotech/templates/bibliotech/checkout_list.html
@@ -7,7 +7,7 @@
 				<th>Checkout Date</th>
 				<th>Due Date</th>
 				<th>Item</th>
-				<th>Checkout Status</th>
+				<th>Approval Status</th>
 				<th>Return Date</th>
 			</thead>
 			<tbody>
