--- a/bibliotech/templates/bibliotech/librarian_control_panel.html
+++ b/bibliotech/templates/bibliotech/librarian_control_panel.html
@@ -3,6 +3,7 @@
 {% block content %}
 <div class="tile is-ancestor">
 	<div class="tile">
+
 		<div class="tile is-parent is-7">
 			<div class="card" style="width: 100%">
 				<div class="card-header has-background-dark">
@@ -50,6 +51,26 @@
 				</div>
 			</div>
 		</div>
+
+		<div class="tile is-parent">
+			<div class="tile is-child is-vertical">
+				<div class="card" style="width: 100%">
+					<div class="card-header has-background-dark">
+						<h1 class="card-header-title has-text-light">Actions</h1>
+					</div>
+					<div class="card-content">
+						<div class="block content">
+							<ul>
+								<li><a>Return an item</a></li>
+								<li><a>Add a new item</a></li>
+								<li><a>Add a new holding</a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
 	</div>
 </div>
 {% endblock %}
