Add link to return view on admin panel

--- a/bibliotech/templates/bibliotech/librarian_control_panel.html
+++ b/bibliotech/templates/bibliotech/librarian_control_panel.html
@@ -61,7 +61,7 @@
 					<div class="card-content">
 						<div class="block content">
 							<ul>
-								<li><a>Return an item</a></li>
+								<li><a href={% url 'return-item' %}>Return an item</a></li>
 								<li><a>Add a new item</a></li>
 								<li><a>Add a new holding</a></li>
 							</ul>
